2004-04-09  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* Documentation/user/lilypond.tely (Top): manual for v2.3 (backportme)

2004-04-09  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/font.scm (add-century-schoolbook-fonts):
	(make-century-schoolbook-tree): New function.

	* input/test/title-markup.ly: Use Century Schoolbook font.

2004-04-09  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scripts/convert-ly.py: limited old-style markup convert. (Thanks
	to Erik Sandberg) 

	* Documentation/user/lilypond.tely (Top): update,  

	* lily/font-metric.cc (LY_DEFINE): new function, return fontName.

	* scm/output-ps.scm (define-fonts): remove hack for feta/parmesan.

	* lily/font-metric.cc (LY_DEFINE): change to ly:font-filename

	* scm/encoding.scm (coding-alist): add AdobeStandardEncoding

2004-04-08  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/part-combiner.scm (determine-split-list): bugfix: if no
	solo-state (at end of solo), we can set the solo status
	too. (backportme.)

	* input/regression/part-combine-solo-end.ly: new file.

2004-04-08  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/abc2ly.py (parse_file): Strip \r from lines.  Fixes DOS
	flavour abc files.  Really ignore unknown keys (backportme).

2004-04-08  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/scaled-font-metric.cc (text_dimension): only multiply with
	magnification_ when looking up in orig_.

	* scm/output-tex.scm (text): switch off char-mapping.

	* lily/tfm.cc (coding_scheme): replace ' ' in encoding with '-',
	because AFM's encoding field cannot have spaces.

2004-04-08  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/output-ps.scm (define-fonts): More re/encoding tweaking.

2004-04-08  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/paper-def.cc (find_scaled_font): change to inputencoding.

	* mf/cmr.enc: new file, without hi-bit ascii info. 

	* lily/bezier-bow.cc (slur_shape): make indent dependent on
	width. This removes the 'hook' at the end of a long slur.
